# can-mit-messr-shrine

./: app.py  index.html
assets/: script.js  style.css
plugin/: Cargo.toml  README.md
plugin/src/: lib.rs
plugin/src/dsp/: bitcrush.rs  delay.rs  distortion.rs  filter.rs  mod.rs  ringmod.rs
