[workspace]
members = [".", "xtask"]

[package]
name = "messr"
version = "0.1.0"
edition = "2021"
authors = ["SickSoSlick"]
license = "MIT"
description = "MESSR — a brutal multi-effect audio destruction plugin. Bitcrush, distortion, ring mod, filter, delay. For use in any DAW that supports VST3 or CLAP."

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = false
